# python-labs

./: README.md
.github/workflows/: main.yml
modules/01_json/: README.md  pyproject.toml
modules/02_faker/: README.md  (+1 more)
modules/03_click/: README.md  pyproject.toml
modules/03_click/click_module/: main.py
modules/03_click/tests/: test_click_module.py
projects/01_flask_minimal_api/: Dockerfile  README.md  pyproject.toml  requirements.txt
projects/01_flask_minimal_api/flask_minimal_api/: main.py
projects/01_flask_minimal_api/tests/: test_01_flask_minimal_api.py
projects/02-alien_invasion/: README.md  pyproject.toml
projects/02-alien_invasion/alien_invasion/: alien.py  alien_invasion.py  bullet.py  button.py  game_stats.py  notes.md  scoreboard.py  settings.py  ship.py
projects/02-alien_invasion/tests/: test_alien_invasion.py
projects/03-learning_logs/: README.md  pyproject.toml
projects/03-learning_logs/learning_log/: settings.py  urls.py
projects/03-learning_logs/learning_logs/: admin.py  forms.py  models.py  urls.py  views.py
projects/03-learning_logs/learning_logs/migrations/: 0001_initial.py  0002_auto_20200602_0318.py  0003_entry.py  0004_topic_owner.py
projects/03-learning_logs/learning_logs/templates/learning_logs/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
projects/03-learning_logs/tests/: test_07_learning_log.py  test_learning_log.py
projects/03-learning_logs/users/: urls.py  views.py
projects/03-learning_logs/users/templates/registration/: logged_out.html  login.html
(+5 files in other folders)
