[tool.poetry]
name = "click_module"
version = "0.1.0"
description = ""
authors = ["Ptran32"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
