[tool.poetry]
name = "flask_minimal_api"
version = "0.1.0"
description = ""
authors = ["Ptran32"]

[tool.poetry.dependencies]
python = "^3.5"
flask_restful = "^0.3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
