[tool.poetry]
name = "alien_invasion"
version = "0.2.0"
description = ""
authors = ["Patrice Tran"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "2.0.0.dev6"
pylint = "^2.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
